<resources>
    <string name="app_name">My Favorite</string>

    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="release">Release Date</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="director">Director</string>
    <string name="overview">Overview</string>
    <string name="runtime">Runtime</string>
    <string name="my_name">Prinanda Rahmatullah</string>
    <string name="my_email">prinanda50@gmail.com</string>
    <string name="about">About Me</string>
    <string name="item_photo">Item Photo</string>
    <string name="subs_2">DICODING MADE\nFinal Submission</string>
    <string name="change_language_setting">Language Setting</string>

    <string name="last_season"> Release</string>
    <string name="creator">Creator</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="status">Status</string>
    <string name="network">Network</string>
    <string name="fav_tvshow">Fav TvShow</string>
    <string name="fav_movie">Fav Movie</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="fav_tv">Fav TV</string>

    <string name="language">en-US</string>
    <string name="reminder_setting">Reminder Setting</string>
</resources>
