<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_movies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_item_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:maxLines="1"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_item_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:maxLines="3"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_item_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>